yyamamoto+sesetup@salesforce.com/src/objects/CustomObject3__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>見積</label>
        <referenceTo>CustomObject2__c</referenceTo>
        <relationshipName>EstimatesDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>見積科目</label>
        <picklist>
            <picklistValues>
                <fullName>契約金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>着手金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>報酬</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>タイムチャージ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>実費</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>手数料</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>値引き</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>見積り明細</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>見積明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>